--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,10 @@ div#home{
 }
 
 
-div.card-body{
+.card-body{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
 }
 
 #article{
